force-app/main/default/objects/Loan_Application__c/Loan_Application__c.object-meta.xml
<CustomObject>
    <label>Loan Applicaiton</label>
    <nameField>
        <label>Loan Applicaiton Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Applicaitons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>