force-app/main/default/objects/Loan_Application__c/fields/Amount_Requested__c.field-meta.xml
<CustomField>
    <fullName>Amount_Requested__c</fullName>
    <description>Amount requested for the loan</description>
    <label>Amount Requested</label>
    <precision>15</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>