force-app/main/default/objects/Loan_Application__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Loan Applicaitons</relationshipLabel>
    <relationshipName>Loan_Applicaitons</relationshipName>
    <type>Lookup</type>
</CustomField>