force-app/main/default/objects/Loan_Application__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <description>Feedback related to the loan application</description>
    <label>Feedback</label>
    <type>TextArea</type>
</CustomField>