force-app/main/default/objects/Loan_Application__c/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <description>Type of loan (House, Car, Education, Agricultural)</description>
    <label>Loan Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Agricultural</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>