force-app/main/default/objects/Loan_Application__c/validationRules/feedback_on_declined.validationRule-meta.xml
<ValidationRule>
    <fullName>feedback_on_declined</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Loan_Status__c , &quot;Declined&quot;),   ISBLANK(Feedback__c ) )</errorConditionFormula>
    <errorDisplayField>Feedback__c</errorDisplayField>
    <errorMessage>Please give the reason for decline in feedback</errorMessage>
</ValidationRule>